# ESP-IDF-I2C-Example

./: .gitignore  CMakeLists.txt  README.md
components/HD44780/: CMakeLists.txt
components/HD44780/examples/HD44780_example_scroll/: CMakeLists.txt  README.md
components/HD44780/examples/HD44780_example_scroll/main/: CMakeLists.txt  HD44780_example_scroll.c  idf_component.yml
components/HD44780/examples/HD44780_example_snow/: CMakeLists.txt  README.md
components/HD44780/examples/HD44780_example_snow/main/: CMakeLists.txt  HD44780_example_snow.c
components/HD44780/examples/HD44780_four_row_example_sntp/: CMakeLists.txt  README.md
components/HD44780/examples/HD44780_four_row_example_sntp/main/: CMakeLists.txt  HD44780_four_row_example_sntp.c  idf_component.yml
components/HD44780/examples/HD44780_two_row_example_sntp/: CMakeLists.txt  README.md
components/HD44780/examples/HD44780_two_row_example_sntp/main/: CMakeLists.txt  HD44780_two_row_example_sntp.c
components/HD44780/src/: HD44780.c  HD44780.h
main/: CMakeLists.txt  adxl345_demo.c  main.c
